<?xml version="1.0"?>
<package format="2">
  <name>cslibs_mesh_map</name>
  <version>0.0.0</version>
  <description>The cslibs_mesh_map package provides mainly implementation of 3D, surface like maps defined by a mesh. </description>

  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cslibs_math_3d</build_depend>
  <build_depend>cslibs_math_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>cslibs_math_3d</build_export_depend>
  <build_export_depend>cslibs_math_ros</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>cslibs_math_3d</exec_depend>
  <exec_depend>cslibs_math_ros</exec_depend>


  <export>
  </export>
</package>
